force-app/main/default/objects/sugati__Airport_Terminal__c/sugati__Airport_Terminal__c.object-meta.xml
<CustomObject>
    <label>Airport Terminal &amp; Class</label>
    <nameField>
        <label>Terminal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Airport Terminals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>