force-app/main/default/objects/sugati__Airport_Terminal__c/fields/sugati__AT_Airport__c.field-meta.xml
<CustomField>
    <fullName>sugati__AT_Airport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Airport</label>
    <referenceTo>sugati__Airport__c</referenceTo>
    <relationshipName>Airport_Terminals</relationshipName>
    <type>Lookup</type>
</CustomField>