force-app/main/default/objects/sugati__Airport_Terminal__c/fields/sugati__AT_Carrier_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__AT_Carrier_Name__c</fullName>
    <label>Carrier Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>