force-app/main/default/objects/sugati__Airport_Terminal__c/fields/sugati__AT_Class__c.field-meta.xml
<CustomField>
    <fullName>sugati__AT_Class__c</fullName>
    <label>Class</label>
    <length>30</length>
    <type>Text</type>
</CustomField>